<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/activity_a"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        tools:context="com.example.aum.smartyapp.Institute">


        <net.grobas.view.MovingImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:clickable="true"
            android:onClick="clickImage"
            android:src="@drawable/kjit"
            app:miv_load_on_create="true"
            app:miv_max_relative_size="3.0"
            app:miv_min_relative_offset="0.2"
            app:miv_repetitions="-1"
            app:miv_speed="100"
            app:miv_start_delay="1000" />


        <TextView
            android:id="@+id/clgname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clgname"
            android:textColor="#af5b19"
            android:textSize="20dp" />

        <me.biubiubiu.justifytext.library.JustifyTextView
            android:id="@+id/clgintro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/clgintro"
            android:textColor="@android:color/black"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/Concept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/Concept"
            android:textColor="#af5b19"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/Concept_p"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/unoder"
            android:textColor="@android:color/black"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/time2"
            android:textColor="#af5b19"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/time2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:paddingBottom="20dp"
            android:text="@string/time"
            android:textColor="@android:color/black"
            android:textSize="15dp" />

    </LinearLayout>
</ScrollView>