<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/activity_the__campus"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.aum.smartyapp.The_Campus">

        <TextView
            android:id="@+id/clgname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thecampus2"
            android:textColor="#af5b19"
            android:textSize="20dp" />

        <me.biubiubiu.justifytext.library.JustifyTextView
            android:id="@+id/clgintro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/thecampus"
            android:textColor="@android:color/black"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/clgintro2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/thecampus3"
            android:textColor="@android:color/black"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/clgintro3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/thecampus4"
            android:textColor="@android:color/black"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/clgintro6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/thecampus5"
            android:textColor="@android:color/black"
            android:textSize="15dp" />


    </LinearLayout>
</ScrollView>