<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Facilities">

    <com.daimajia.slider.library.SliderLayout
        android:id="@+id/slider"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        custom:auto_cycle="true"
        custom:indicator_visibility="visible"
        custom:pager_animation="Accordion"
        custom:pager_animation_span="1100" />

    <com.daimajia.slider.library.Indicators.PagerIndicator
        android:id="@+id/custom_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        custom:selected_color="#0095BF"
        custom:selected_drawable="@drawable/bird"
        custom:selected_height="6dp"
        custom:selected_padding_left="5dp"
        custom:selected_padding_right="5dp"
        custom:selected_width="6dp"
        custom:shape="oval"
        custom:unselected_color="#55333333"
        custom:unselected_height="6dp"
        custom:unselected_padding_left="5dp"
        custom:unselected_padding_right="5dp"
        custom:unselected_width="6dp" />

    <com.daimajia.slider.library.Indicators.PagerIndicator
        android:id="@+id/custom_indicator2"
        style="@style/AndroidImageSlider_Corner_Oval_Orange"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"

        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/activity_a"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            tools:context="com.example.aum.smartyapp.Institute">


            <TextView
                android:id="@+id/clgname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="Class and Tutorial"
                android:textColor="#af5b19"
                android:textSize="20dp" />

            <me.biubiubiu.justifytext.library.JustifyTextView
                android:id="@+id/clgintro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/clgclass"
                android:textColor="@android:color/black"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/clgname2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="Library"
                android:textColor="#af5b19"
                android:textSize="20dp" />

            <me.biubiubiu.justifytext.library.JustifyTextView
                android:id="@+id/clgintro2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/clgintro2"
                android:textColor="@android:color/black"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/clgname3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="Computer Center"
                android:textColor="#af5b19"
                android:textSize="20dp" />

            <me.biubiubiu.justifytext.library.JustifyTextView
                android:id="@+id/clgintro3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/clgclass2"
                android:textColor="@android:color/black"
                android:textSize="15dp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>