<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/activity_course"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.aum.smartyapp.Course">

        <TextView
            android:id="@+id/mech"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/elec"
            android:textColor="#af5b19"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/details"
            android:textColor="@android:color/black"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/details2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/details3"
            android:textColor="@android:color/black"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/details3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/details2"
            android:textColor="@android:color/black"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/details4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/details4"
            android:textColor="@android:color/black"
            android:textSize="15dp" />


        <TableLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#ffffff"
            android:shrinkColumns="*"
            android:stretchColumns="*">


            <!-- Row 1 with single column -->
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

            </TableRow>

            <!-- Row 2 with 3 columns -->
            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp">

                <TextView
                    android:id="@+id/Text"
                    android:layout_weight="1"
                    android:background="#F3F0EE"
                    android:gravity="center"
                    android:padding="20dip"
                    android:text="Seat Type"
                    android:textColor="#af5b19" />

                <TextView
                    android:id="@+id/TextView"
                    android:layout_weight="1"
                    android:background="#F3F0EE"
                    android:gravity="center"
                    android:padding="20dip"
                    android:text="Seats"
                    android:textColor="#af5b19" />


            </TableRow>

            <!-- Row 3 with 3 columns -->


            <TableRow
                android:id="@+id/tableRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp">

                <TextView
                    android:layout_width="220dp"
                    android:layout_weight="1"
                    android:background="#dcdcdc"
                    android:gravity="center"
                    android:padding="20dip"
                    android:text="Intake 1st Year"
                    android:textColor="#000000" />

                <TextView
                    android:layout_weight="1"
                    android:background="#d3d3d3"
                    android:gravity="center"
                    android:padding="20dip"
                    android:text="120"
                    android:textColor="#000000"
                    android:textSize="15dp" />


            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp">

                <TextView
                    android:layout_width="220dp"
                    android:layout_weight="1"
                    android:background="#dcdcdc"
                    android:gravity="center"
                    android:padding="20dip"
                    android:text="Admission by ACPC"
                    android:textColor="#000000" />

                <TextView
                    android:layout_weight="1"
                    android:background="#d3d3d3"
                    android:gravity="center"
                    android:padding="20dip"
                    android:text="90"
                    android:textColor="#000000"
                    android:textSize="15dp" />


            </TableRow>

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp">

                <TextView
                    android:layout_width="220dp"
                    android:layout_weight="1"
                    android:background="#dcdcdc"
                    android:gravity="center"
                    android:padding="20dip"
                    android:text="Management Quota"
                    android:textColor="#000000" />

                <TextView
                    android:layout_weight="1"
                    android:background="#d3d3d3"
                    android:gravity="center"
                    android:padding="20dip"
                    android:text="30"
                    android:textColor="#000000"
                    android:textSize="15dp" />


            </TableRow>

            <TableRow
                android:id="@+id/tableRow5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp">

                <TextView
                    android:layout_width="220dp"
                    android:layout_weight="1"
                    android:background="#dcdcdc"
                    android:gravity="center"
                    android:padding="20dip"
                    android:text="TFW	"
                    android:textColor="#000000" />

                <TextView
                    android:layout_weight="1"
                    android:background="#d3d3d3"
                    android:gravity="center"
                    android:padding="20dip"
                    android:text="6"
                    android:textColor="#000000"
                    android:textSize="15dp" />


            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp">

                <TextView
                    android:layout_width="220dp"
                    android:layout_weight="1"
                    android:background="#dcdcdc"
                    android:padding="20dip"
                    android:paddingLeft="5dp"
                    android:text="D2D for 2013-14,Admission in direct 2nd year"
                    android:textColor="#000000" />

                <TextView
                    android:layout_weight="1"
                    android:background="#d3d3d3"
                    android:gravity="center"
                    android:padding="20dip"
                    android:text="24"
                    android:textColor="#000000"
                    android:textSize="15dp" />


            </TableRow>


        </TableLayout>


    </LinearLayout>
</ScrollView>